--- a/mobile.html
+++ b/mobile.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta http-equiv="Content-Type" content="text/html" />
     <meta name="msapplication-tap-highlight" content="yes" />
-    <title>Vite App</title>
+    <title>写手信息系统</title>
   </head>
   <body>
     <div id="app"></div>
